add component PageHeader

--- a/src/assets/style/global.css
+++ b/src/assets/style/global.css
@@ -9,9 +9,9 @@
   --color-primary-darker: #6842c2;
   --color-secondary: #04d361;
   --color-secondary-dark: #04bf58;
-  --color-tittle-in-primary: #ffffff;
+  --color-title-in-primary: #ffffff;
   --color-text-in-primary: #d4c2ff;
-  --color-text-tittle: #32264d;
+  --color-text-title: #32264d;
   --color-text-complement: #9c98a6;
   --color-text-base: #6a6180;
   --color-line-in-white: #e6e6f0;
